desktop nav list alignment fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -45,6 +45,12 @@ header nav[aria-expanded="true"] {
     }
 }
 
+@media (width >= 1149px) {
+    header nav[aria-expanded="true"] > .section.nav-sections ul{
+        flex-direction: column;
+        align-items: flex-start;
+    }    
+}
 header nav[aria-expanded="true"] > .section.nav-sections ul{
     color: #9c9c9c;    
     margin-left: 20px;
